# connect4

./: .coverage  .pylintrc  README.md  maarittely.md  pyproject.toml
dokumentaatio/: testaus.md  toteutus.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: main.py
src/entities/: ai.py  board.py  game.py
src/tests/: ai_test.py  board_test.py  game_test.py
