[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["kaarleol <kaarlenloota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pylint = "^3.2.2"
coverage = "^7.5.3"
autopep8 = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
